Added facebook picture to flash message

--- a/views/home.erb
+++ b/views/home.erb
@@ -1,5 +1,6 @@
 <h1>The Moodlist</h1>
 
 <p><%= flash[:notice] %></p>
+<p><img src=<%= flash[:picture]%> ></p>
 
 <a href='/auth/facebook'>Login with Facebook!</a>
