Added location to user schema and cleaned up user model

--- a/views/profile.erb
+++ b/views/profile.erb
@@ -1,5 +1,8 @@
 <% if @user %>  
-  <p>Welcome to <%= @user.full_name %>'s profile</p>
+  <h1>Welcome to <%= @user.full_name %>'s profile</h1>
+  <p><img src= <%= @user.image_url %> ></p>
+  <p><%= @user.location %></p>
+
 <% else %>  
   <p>User not found.</p>  
 <% end %>  
